fix: use different colors for annotation-line in light/dark modes
- before this change it was black for both light and dark mode
- in dark mode, black on black was hardly visible

--- a/browser/css/color-palette.css
+++ b/browser/css/color-palette.css
@@ -15,6 +15,7 @@
 	--color-status-badge: #616161;
 	--color-slideshow: #A8A8A8;
 	--color-date-text: #555555;
+	--color-annotation-line: #000000;
 
 	--color-main-background: #F8F9FA;
 	--color-background-dark: #e8e8e8;  /* select */
